test/org/midica/testfiles/failing/oto-tremolo-with-pattern.midica
INCLUDE inc/instruments.midica

1: c (tr=/32) d:pat

PATTERN pat
	// do nothing
END
